NEW136511
CallEdgeProfile::visitWeak() shouldn't attempt to despecify empty profiles
https://bugs.webkit.org/show_bug.cgi?id=136511
Summary CallEdgeProfile::visitWeak() shouldn't attempt to despecify empty profiles
Filip Pizlo
Reported 2014-09-03 15:53:29 PDT
Patch forthcoming.
Attachments
the patch (2.47 KB, patch)
2014-09-03 15:54 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2014-09-03 15:54:48 PDT
Created attachment 237594 [details] the patch
Geoffrey Garen
Comment 2 2014-09-03 17:17:08 PDT
Comment on attachment 237594 [details] the patch r=me
Note You need to log in before you can comment on or make changes to this bug.