CallEdgeProfile::visitWeak() shouldn't attempt to despecify empty profiles https://bugs.webkit.org/show_bug.cgi?id=136511

Reviewed by Geoffrey Garen.

* bytecode/CallEdgeProfile.cpp:
(JSC::CallEdgeProfile::worthDespecifying):
(JSC::CallEdgeProfile::visitWeak):
(JSC::CallEdgeProfile::mergeBack):



Canonical link: https://commits.webkit.org/154308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173244 268f45cc-cd09-0410-ab3c-d52691b4dbfc